--- a/package.json
+++ b/package.json
@@ -5,26 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "client": "npm run start --prefix client",
+    "server": "nodemon index.js",
+    "dev": "concurrently \"npm run client\" \"npm run server\""
   },
   "engines": {
     "node": "9.10.1",
-    "npm": "5.6.0",
-    "start":"node index.js"
-  },
-  "engines":{
-    "node":"9.10.1",
-    "npm":"5.6.0"
+    "npm": "5.6.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "mongoose": "^5.1.2",
     "nodemon": "^1.17.4",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
-    "express" : "^4.16.3"
+    "passport-google-oauth20": "^1.0.0"
   }
 }
