added login with twitter

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,18 @@
     "/auth/google/callback": {
       "target": "http://localhost:5000"
     },
+    "/auth/twitter": {
+      "target": "http://localhost:5000"
+    },
+    "/auth/twitter/callback": {
+      "target": "http://localhost:5000"
+    },
+    "/auth/facebook": {
+      "target": "http://localhost:5000"
+    },
+    "/auth/facebook/callback": {
+      "target": "http://localhost:5000"
+    },
     "/api/*": {
       "target": "http://localhost:5000"
     }
