--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^5.1.2",
     "nodemon": "^1.17.4",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
